responsivity on mobile fixed

--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -10,9 +10,9 @@
   text-align: center;
 }
 
-.dishup-form {
+/* .dishup-form {
   height: 37vh !important;
-}
+} */
 
 .form-container .form-icon {
   color: #fff;
